MEM-47 gradle bumped to 7.2